[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Menus/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/GOODBYE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menus/StartScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 300
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=8]
action = "iu_select"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 200
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 200.0
margin_right = 1910.0
margin_bottom = 1070.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 1900.0
margin_bottom = 259.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 506.0
margin_top = 43.0
margin_right = 853.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "KEEP"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 857.0
margin_right = 1111.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.682353, 0.105882, 0.0392157, 1 )
text = "IT"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 1115.0
margin_top = 43.0
margin_right = 1393.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "FED"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 263.0
margin_right = 1900.0
margin_bottom = 870.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 831.0
margin_top = 114.0
margin_right = 1068.0
margin_bottom = 207.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.105882, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.105882, 0.0392157, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 5 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 839.0
margin_top = 257.0
margin_right = 1061.0
margin_bottom = 350.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.105882, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.105882, 0.0392157, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 9 )
text = "INTRO"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_left = 693.0
margin_top = 400.0
margin_right = 1206.0
margin_bottom = 493.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0.105882, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.105882, 0.0392157, 1 )
enabled_focus_mode = 0
shortcut = SubResource( 7 )
text = "INSTRUCTIONS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Intro" to="." method="_on_Intro_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
